Refactor: extract shared base class, consolidate duplication (-805 lines)
- Extract ColumnStyleConfig<T,SELF> abstract base for ExcelColumnBuilder and ColumnConfig,
  eliminating ~500 lines of duplicated fields and setter methods
- Simplify ExcelSheetWriter.buildColumn() from 72 lines to 14 lines
- Extract SXSSFSheetHelper for consolidated _sh reflection access
- Consolidate 5 applyXxxAllSheets() methods into single applyPostProcessingAllSheets()
- Simplify ExcelStyleSupporter cache key generation with Arrays.toString()
- Modernize SheetContext column names with List.copyOf()

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>